--- a/views/index.ejs
+++ b/views/index.ejs
@@ -169,7 +169,7 @@
         - #HERO
       -->
       <div class="popup" id="popup">
-        <div class="login-wrapper active-popup">
+        <div class="login-wrapper">
           <span class="icon-close">
               <ion-icon name="close-outline"></ion-icon>
           </span>
@@ -205,7 +205,7 @@
               <form action="#">
                   <div class="input-box">
                       <span class="icon"><ion-icon name="person-outline"></ion-icon></span>
-                      <input type="email" required>
+                      <input type="name" required>
                       <label>Username</label>
                   </div>
                   <div class="input-box">
