--- a/views/index.ejs
+++ b/views/index.ejs
@@ -313,26 +313,200 @@
         </div>
       </section>
 
+    
       <!-- 
-        - #PROMO
-      -->
-    <section class="sipaling" id="promos">
-      <div ng-app="promoApp" ng-controller="promoCtrl">
-        <div class="promo-banner">
+      - #PROMO
+    -->
+    
+  <section class="promo" id="rides">
+    <div class="container">
+
+      <p class="section-subtitle">Ancol Promotion</p>
+
+      <h2 class="h2 section-title">PROMOTION IN TOWN!!!</h2>
+
+      <p class="section-text">
+        Liburan bersama keluarga menjadi lebih asik dan hemat dengan promosi menarik.
+      </p>
+
+      <ul class="promo-list">
+
+        <li>
+          <div class="promo-card">
+
+            <figure class="card-img">
+              <img src="./images/PROMOSIATU.png" alt="Antasena Tunnel" loading="lazy">
+            </figure>
+
+            <div class="card-content">
+
+              
+
+              <p class="card-subtitle">
+                <a href="#">Dufan</a>
+              </p>
+
+              
+
+              <p class="card-text">
+                Aktifkan Notifikasi Untuk Kesempatan Klaim Tiket Gratis dan Diskon Tiket
+              </p>
+
+            </div>
+
+          </div>
+        </li>
+
+
+        <li>
+          <div class="promo-card">
+
+            <figure class="card-img">
+              <img src="./images/PROMODUA.png" alt="Antasena Tunnel" loading="lazy">
+            </figure>
+
+            <div class="card-content">
+
+              
+
+              <p class="card-subtitle">
+                <a href="#">Samudra Ancol</a>
+              </p>
+
+              
+
+              <p class="card-text">
+                Lebaran Bareng Dolphi Di Samudra Ancol Bonus Main Ke Jakarta Bird Land!
+              </p>
+
+            </div>
+
+          </div>
+        </li>
+
+        <li>
+          <div class="promo-card">
+
+            <figure class="card-img">
+              <img src="./images/SeaworldAncol.jpg" alt="Antasena Tunnel" loading="lazy">
+            </figure>
+
+            <div class="card-content">
+
           
-          <p class="promo-subtitle">Uncover place</p>
 
-          <h2 class="h2 section-title">Get Yours Promo</h2>
+              <p class="card-subtitle">
+                <a href="#">Seaworld Ancol</a>
+              </p>
 
-          <p class="section-text">
-            Nikmati promo istimewa di Ancol, hadiah harga terbaik untuk pengalaman tak terlupakan! 
-            Dapatkan penawaran eksklusif ini dan raih momen menyenangkan dengan diskon menarik.
-          </p>
-          <img ng-src="{{ promoImage }}" alt="Promo Banner">
-          <a ng-href="{{ promoLink }}" target="_blank">{{ promoButton }}</a>
-        </div>
+              
+
+              <p class="card-text">
+                Bayar Sekali Gratis Rekreasi Setahun ke Sea World Ancol Dengan Annual Pass!
+              </p>
+              
+
+            </div>
+
+          </div>
+        </li>
+        <li>
+          <div class="promo-card">
+
+            <figure class="card-img">
+              <img src="./images/AtlantisPancol.jpg" alt="Antasena Tunnel" loading="lazy">
+            </figure>
+
+            <div class="card-content">
+
+          
+
+              <p class="card-subtitle">
+                <a href="#">Atlantis Ancol</a>
+              </p>
+
+              
+
+              <p class="card-text">
+                Annual Pass Atlantis Hanya 165rb! Bisa Berenang dan Main Sepuasnya Setahun
+              </p>
+
+            </div>
+
+          </div>
+        </li>
+
+        <li>
+          <div class="promo-card">
+
+            <figure class="card-img">
+              <img src="./images/PREWEDANCOL.png" alt="Antasena Tunnel" loading="lazy">
+            </figure>
+
+            <div class="card-content">
+
+          
+
+              <p class="card-subtitle">
+                <a href="#">Ancol</a>
+              </p>
+
+              
+
+              <p class="card-text">
+                Prewedding di Ancol, Abadikan Moment Terbaik Kamu
+              </p>
+
+            </div>
+
+          </div>
+        </li>
+
+        <li>
+          <div class="promo-card">
+
+            <figure class="card-img">
+              <img src="./images/POINANCOL.png" alt="Antasena Tunnel" loading="lazy">
+            </figure>
+
+            <div class="card-content">
+
+          
+
+              <p class="card-subtitle">
+                <a href="#"> Ancol</a>
+              </p>
+
+             
+
+              <p class="card-text">
+                Join Ancol Points dan Dapatkan Keuntungan Eksklusif
+              </p>
+              
+
+            </div>
+
+          </div>
+        </li>
+
+        
+      
+    </div>
+  </section>
+
+
+  <!-- 
+      - #POP UP
+    -->
+    <div class="popup-overlay" id="popup">
+      <div class="popup-content">
+        <!-- Konten pop-up -->
+        <img src="./images/PROMOSIATU.png" alt="Promosi 1" loading="lazy">
+        <p>Promo spesial! Dapatkan tiket gratis & diskon tiket!</p>
+        <span class="popup-close" onclick="closePopup()">X</span>
       </div>
-    </section>
+    </div>
+  
 
       <!-- 
         - #POPULAR
