--- a/views/index.ejs
+++ b/views/index.ejs
@@ -168,7 +168,7 @@
       <!-- 
         - #HERO
       -->
-      <div class="popup" id="popup">
+      <div class="popup">
         <div class="login-wrapper">
             <span class="icon-close">
                 <ion-icon name="close-outline"></ion-icon>
@@ -495,17 +495,16 @@
   </section>
 
 
-  <!-- 
-      - #POP UP
-    -->
-    <div class="popup-overlay" id="popup">
-      <div class="popup-content">
+ 
+   <!-- Pop up -->
+   <div class="popup-overlay" id="popup" style="display: none;">
+    <div class="popup-content">
         <!-- Konten pop-up -->
-        <img src="./images/PROMOSIATU.png" alt="Promosi 1" loading="lazy">
-        <p>Promo spesial! Dapatkan tiket gratis & diskon tiket!</p>
+        <p>Successfully redeemed</p>
         <span class="popup-close" onclick="closePopup()">X</span>
-      </div>
     </div>
+</div>
+    
   
 
       <!-- 
