--- a/public/style.css
+++ b/public/style.css
@@ -1875,6 +1875,7 @@ address {
 }
 
 /* Tambahkan gaya lainnya sesuai kebutuhan */
+/* Pop up styles */
 .popup-overlay {
   position: fixed;
   top: 0;
@@ -1882,39 +1883,29 @@ address {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
-  display: flex;
+  display: none;
   justify-content: center;
   align-items: center;
-  z-index: 999;
-  opacity: 0;
-  visibility: hidden;
-  transition: opacity 0.3s ease, visibility 0.3s ease;
 }
-.popup-overlay.active {
-  opacity: 1;
-  visibility: visible;
-}
+
 .popup-content {
-  background-color: #fff;
+  background-color: white;
   padding: 20px;
-  border-radius: 10px;
-  max-width: 80%;
+  border-radius: 5px;
   text-align: center;
-  position: relative;
-  opacity: 0;
-  transform: translateY(-50px);
-  transition: opacity 0.3s ease, transform 0.3s ease;
 }
-.popup-overlay.active .popup-content {
-  opacity: 1;
-  transform: translateY(0);
-}
+
 .popup-close {
   position: absolute;
   top: 10px;
   right: 10px;
   cursor: pointer;
 }
+
+/* Other styles */
+/* Tambahkan gaya lainnya sesuai kebutuhan Anda */
+
+
 
 
 .promo { padding-block: var(--section-padding); }
