--- a/views/404.ejs
+++ b/views/404.ejs
@@ -7,7 +7,7 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>404 Error - SB Admin</title>
-        <link href="/public/styles1.css" rel="stylesheet" />
+        <link href="styles1.css" rel="stylesheet" />
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
     </head>
     <body>
@@ -20,7 +20,7 @@
                                 <div class="text-center mt-4">
                                     <img class="mb-4 img-error" src="assets/img/error-404-monochrome.svg" />
                                     <p class="lead">This requested URL was not found on this server.</p>
-                                    <a href="./index1.ejs">
+                                    <a href="index1.ejs">
                                         <i class="fas fa-arrow-left me-1"></i>
                                         Return to Dashboard
                                     </a>
@@ -46,6 +46,6 @@
             </div>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-        <script src="/public/scripts1.js"></script>
+        <script src="scripts1.js"></script>
     </body>
 </html>
