--- a/views/index.ejs
+++ b/views/index.ejs
@@ -123,11 +123,7 @@
             </li>
 
             <li>
-              <a href="#promos" class="navbar-link" data-nav-link>promo</a>
-            </li>
-
-            <li>
-              <a href="#rides" class="navbar-link" data-nav-link>rides</a>
+              <a href="#rides" class="navbar-link" data-nav-link>promo</a>
             </li>
 
             <li>
@@ -1777,13 +1773,14 @@
           <p class="form-text">
             Subscribe our newsletter for more update & news !!
           </p>
-
-          <form action="" class="form-wrapper">
+        
+          <!-- Tambahkan id="subscribe-form" pada elemen form -->
+          <form action="/subscribe" method="POST" class="form-wrapper" id="subscribe-form">
             <input type="email" name="email" class="input-field" placeholder="Enter Your Email" required>
-
+        
             <button type="submit" class="btn btn-secondary">Subscribe</button>
           </form>
-
+        
         </div>
 
       </div>
