--- a/views/index.ejs
+++ b/views/index.ejs
@@ -65,9 +65,9 @@
 
         <div class="header-btn-group">
 
-          <button class="search-btn" aria-label="Search">
+          <!-- <button class="search-btn" aria-label="Search">
             <ion-icon name="search"></ion-icon>
-          </button>
+          </button> -->
 
           <button class="nav-open-btn" aria-label="Open Menu" data-nav-open-btn>
             <ion-icon name="menu-outline"></ion-icon>
@@ -254,14 +254,7 @@
         </div>
       </section>
 
-      <!-- 
-        - #Test
-      -->
-      <form action="/index" method="POST">
-        <input type="text" id="title" name="title" placeholder="Title">
-        <input type="text" id="description" name="description" placeholder="Description">
-        <button type="submit">Simpan</button>
-      </form>
+      
       
       
       
@@ -340,34 +333,23 @@
       <ul class="promo-list">
 
         <li>
-          <div class="promo-card">
-
+          <div class="promo-card" data-title="Dufan" data-description="Masukan Kode Promo Di Form Bawah!" data-image="./images/PROMOSIATU.png"  data-promo-code="DUFAN25">
             <figure class="card-img">
-              <img src="./images/PROMOSIATU.png" alt="Antasena Tunnel" loading="lazy">
+              <img src="./images/PROMOSIATU.png" alt="Dufan" loading="lazy">
             </figure>
-
             <div class="card-content">
-
-              
-
               <p class="card-subtitle">
                 <a href="#">Dufan</a>
               </p>
-
-              
-
               <p class="card-text">
                 Aktifkan Notifikasi Untuk Kesempatan Klaim Tiket Gratis dan Diskon Tiket
               </p>
-
             </div>
-
           </div>
         </li>
 
-
         <li>
-          <div class="promo-card">
+          <div class="promo-card" data-title="Dufan" data-description="Masukan Kode Promo Di Form Bawah!" data-image="./images/PROMOSIATU.png"  data-promo-code="DUFAN21">
 
             <figure class="card-img">
               <img src="./images/PROMODUA.png" alt="Antasena Tunnel" loading="lazy">
@@ -393,7 +375,7 @@
         </li>
 
         <li>
-          <div class="promo-card">
+          <div class="promo-card" data-title="Dufan" data-description="Masukan Kode Promo Di Form Bawah!" data-image="./images/PROMOSIATU.png"  data-promo-code="DUFAN22">
 
             <figure class="card-img">
               <img src="./images/SeaworldAncol.jpg" alt="Antasena Tunnel" loading="lazy">
@@ -419,7 +401,7 @@
           </div>
         </li>
         <li>
-          <div class="promo-card">
+          <div class="promo-card" data-title="Dufan" data-description="Masukan Kode Promo Di Form Bawah!" data-image="./images/PROMOSIATU.png"  data-promo-code="DUFAN23">
 
             <figure class="card-img">
               <img src="./images/AtlantisPancol.jpg" alt="Antasena Tunnel" loading="lazy">
@@ -445,7 +427,7 @@
         </li>
 
         <li>
-          <div class="promo-card">
+          <div class="promo-card" data-title="Dufan" data-description="Masukan Kode Promo Di Form Bawah!" data-image="./images/PROMOSIATU.png"  data-promo-code="DUFAN24">
 
             <figure class="card-img">
               <img src="./images/PREWEDANCOL.png" alt="Antasena Tunnel" loading="lazy">
@@ -471,7 +453,7 @@
         </li>
 
         <li>
-          <div class="promo-card">
+          <div class="promo-card" data-title="Dufan" data-description="Masukan Kode Promo Di Form Bawah!" data-image="./images/PROMOSIATU.png"  data-promo-code="DUFAN26">
 
             <figure class="card-img">
               <img src="./images/POINANCOL.png" alt="Antasena Tunnel" loading="lazy">
@@ -502,7 +484,13 @@
     </div>
   </section>
 
-
+  <!-- 
+        - #Test
+      -->
+      <form class="typing" action="/index" method="POST">
+        <input   type="text" id="title" name="title" placeholder="Insert Promo Code">
+        <button type="submit">Redeem</button>
+      </form>
  
    <!-- Pop up -->
    <div class="popup-overlay" id="popup" style="display: none;">
@@ -1691,22 +1679,18 @@
 
       <section class="cta" id="contact">
         <div class="container">
-
           <div class="cta-content">
             <p class="section-subtitle">Call To Action</p>
-
             <h2 class="h2 section-title">Ready For Unforgettable Adventure in Our Ancol.</h2>
-
             <p class="section-text">
-              Get ready to embark on an unforgettable adventure at our enchanting Ancol destination, 
+              Get ready to embark on an unforgettable adventure at our enchanting Ancol destination,
               where every moment promises excitement and lasting memories!
             </p>
           </div>
-
-          <button class="btn btn-secondary">Contact Us !</button>
-
+          <a href="https://wa.me/6281237611274" target="_blank" class="btn btn-secondary">Contact Us !</a>
         </div>
       </section>
+      
 
     </article>
   </main>
@@ -1796,15 +1780,15 @@
         <ul class="footer-bottom-list">
 
           <li>
-            <a href="#" class="footer-bottom-link">Privacy Policy</a>
+            <a href="https://youtu.be/dQw4w9WgXcQ?si=SDs__opKeK5kjusb" class="footer-bottom-link">Privacy Policy</a>
           </li>
 
           <li>
-            <a href="#" class="footer-bottom-link">Term & Condition</a>
+            <a href="https://youtu.be/dQw4w9WgXcQ?si=SDs__opKeK5kjusb" class="footer-bottom-link">Term & Condition</a>
           </li>
 
           <li>
-            <a href="#" class="footer-bottom-link">FAQ</a>
+            <a href="https://youtu.be/dQw4w9WgXcQ?si=SDs__opKeK5kjusb" class="footer-bottom-link">FAQ</a>
           </li>
 
         </ul>
