--- a/views/index.ejs
+++ b/views/index.ejs
@@ -507,7 +507,58 @@
         - #POPULAR
       -->
 
-      <section class="popular" id="rides">
+            <section class="popular" id="rides">
+          <div class="container">
+
+              <p class="section-subtitle">Ancol Adventure</p>
+
+              <h2 class="h2 section-title">Tours and Rides in Ancol</h2>
+
+              <p class="section-text">
+                  SeaWorld, Atlantis, Samudra, Pantai, dan Eco Park di Ancol menawarkan pengalaman yang seru dan tak terlupakan.
+              </p>
+
+              <ul class="popular-list">
+                <% rides.forEach(function(ride) { %> <!-- Ganti ride menjadi rides -->
+                    <li>
+                        <div class="popular-card">
+                            <figure class="card-img">
+                                <img src="<%= ride.image %>" alt="<%= ride.title %>" loading="lazy">
+                            </figure>
+                            <div class="card-content">
+                                <p class="card-subtitle">
+                                    <a href="#"><%= ride.subtitle %></a>
+                                </p>
+                                <div class="card-rating">
+                                  <ion-icon name="star"></ion-icon>
+                                  <ion-icon name="star"></ion-icon>
+                                  <ion-icon name="star"></ion-icon>
+                                  <ion-icon name="star"></ion-icon>
+                                  <ion-icon name="star"></ion-icon>
+                                </div>
+                                <h3 class="h3 card-title">
+                                    <a href="#"><%= ride.title %></a>
+                                </h3>
+                                <p class="card-text">
+                                    <%= ride.description %>
+                                </p>
+                            </div>
+                        </div>
+                    </li>
+                <% }); %>
+            </ul>
+            
+
+              <button class="btn btn-primary" id="load-more">More destination</button>
+              <button class="btn btn-primary" id="show-less">Show Less</button>
+
+          </div>
+      </section>
+
+
+
+
+      <!-- <section class="popular" id="rides">
         <div class="container">
 
           <p class="section-subtitle">Ancol Adventure</p>
@@ -1143,7 +1194,7 @@
           <button class="btn btn-primary" id="show-less">Show Less</button>
 
         </div>
-      </section>
+      </section> -->
 
 
 
