--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -28,7 +28,7 @@
                 <a class="nav-link" href="/add"><i class="fas fa-user-plus me-1"></i>Add User</a>
               </li>
               <li class="nav-item active">
-                <a class="nav-link" href="#"><i class="fas fa-globe me-1"></i>About</a>
+                <a class="nav-link" href="/add_rides"><i class="fas fa-plus"></i></i> Rides</a>
               </li>
               <li class="nav-item active">
                 <a class="nav-link" href="#"><i class="fas fa-envelope me-1"></i>Contact</a>
