--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1245,7 +1245,7 @@
                     <span>/ per person</span>
                   </p>
 
-                  <button class="btn btn-secondary">Book Now</button>
+                  <button id="bookNowBtn" class="btn btn-secondary">Book Now</button>
 
                 </div>
 
@@ -1318,7 +1318,7 @@
                     <span>/ per person</span>
                   </p>
 
-                  <button class="btn btn-secondary">Book Now</button>
+                  <button id="bookNowBtn" class="btn btn-secondary">Book Now</button>
 
                 </div>
 
@@ -1389,7 +1389,7 @@
                     <span>/ per person</span>
                   </p>
 
-                  <button class="btn btn-secondary">Book Now</button>
+                  <button id="bookNowBtn" class="btn btn-secondary">Book Now</button>
 
                 </div>
 
@@ -1462,7 +1462,7 @@
                     <span>/ per person</span>
                   </p>
 
-                  <button class="btn btn-secondary">Book Now</button>
+                  <button id="bookNowBtn" class="btn btn-secondary">Book Now</button>
 
                 </div>
 
@@ -1535,7 +1535,7 @@
                     <span>/ per person</span>
                   </p>
 
-                  <button class="btn btn-secondary">Book Now</button>
+                  <button id="bookNowBtn" class="btn btn-secondary">Book Now</button>
 
                 </div>
 
