--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -30,6 +30,11 @@
               <li class="nav-item active">
                 <a class="nav-link" href="/add_rides"><i class="fas fa-plus"></i></i> Rides</a>
               </li>
+
+              <li class="nav-item active">
+                <a class="nav-link" href="/add_carousel"><i class="fas fa-plus"></i></i> Carousel</a>
+              </li>
+
               <li class="nav-item active">
                 <a class="nav-link" href="#"><i class="fas fa-envelope me-1"></i>Contact</a>
               </li>
