--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1245,8 +1245,7 @@
                     <span>/ per person</span>
                   </p>
 
-                  <button id="bookNowBtn" class="btn btn-secondary">Book Now</button>
-
+                  <button id="bookNowBtn" class="btn btn-secondary btnBOOKCB">Book Now</button>
                 </div>
 
               </div>
