--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -36,7 +36,7 @@
               </li>
 
               <li class="nav-item active">
-                <a class="nav-link" href="#"><i class="fas fa-envelope me-1"></i>Contact</a>
+                <a class="nav-link" href="/add_promo"><i class="fas fa-plus"></i>Promos</a>
               </li>
               <!-- Tambahkan elemen navigasi lainnya di sini -->
             </ul>
