--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -11,11 +11,12 @@
     integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" 
     crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.datatables.net/v/bs4/dt-2.0.5/datatables.min.css" rel="stylesheet">
+    <link rel="shortcut icon" href="./images/A_logo.png">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #0056b3;">
         <div class="container">
-          <a href="/" class="navbar-brand"><i class="fas fa-code me-2"></i>CodeMania</a>
+          <a href="/" class="navbar-brand"><i class=""></i>Admin Ancol</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#my-nav" aria-controls="my-nav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
