--- a/views/index.ejs
+++ b/views/index.ejs
@@ -331,7 +331,7 @@
                   <li>
                       <div class="promo-card" data-title="<%= promo.title %>" data-description="<%= promo.description %>" data-image="/uploads/<%= promo.image %>">
                           <figure class="card-img">
-                              <img src="/uploads/<%= promo.image %>" alt="<%= promo.title %>" loading="lazy">
+                              <img src="<%= promo.image %>" alt="<%= promo.title %>" loading="lazy">
                           </figure>
                           <div class="card-content">
                               <p class="card-subtitle">
