--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -26,7 +26,7 @@
                             <% admins.forEach((admin, index) => { %>
                                 <tr class="align-middle">
                                     <td><%= index + 1 %></td>
-                                    <td><img src="/uploads/<%= admin.image %>" width="50" class="img-thumbnail"></td>
+                                    <td><img src="<%= admin.image %>" width="50" class="img-thumbnail"></td>
                                     <td><%= admin.name %></td>
                                     <td><%= admin.email %></td>
                                     <td><%= admin.phone %></td>
