--- a/views/index.ejs
+++ b/views/index.ejs
@@ -281,36 +281,42 @@
         <section class="tour-search">
           <div class="container">
             <form action="/inquire-now" class="tour-search-form" method="POST" autocomplete="off">
-            
               <div class="input-wrapper">
                 <label for="destination" class="input-label">Search Destination*</label>
                 <input type="text" name="destination" id="destination" required placeholder="Enter Destination" class="input-field">
               </div>
-            
+      
               <div class="input-wrapper">
                 <label for="people" class="input-label">Pax Number*</label>
                 <input type="number" name="people" id="people" required placeholder="No. of People" class="input-field">
               </div>
-            
+      
               <div class="input-wrapper">
                 <label for="checkin" class="input-label">Check-in Date**</label>
                 <input type="date" name="checkin" id="checkin" required class="input-field">
               </div>
-            
+      
               <div class="input-wrapper">
                 <label for="checkout" class="input-label">Checkout Date*</label>
                 <input type="date" name="checkout" id="checkout" required class="input-field">
               </div>
-            
+      
               <button type="submit" class="btn btn-secondary">Inquire now</button>
-            
             </form>
+      
+            <!-- Menampilkan pesan -->
+            <% if (message) { %>
+              <div id="alertMessage" class="alert alert-primary">
+                <strong><%= message.message %></strong>
+                <button class="btn-close" onclick="closeAlert()" aria-label="Close">×</button>
+              </div>
+            <% } %>
+            <!-- Akhir bagian pesan -->
           </div>
         </section>
-        
-        <script src="scripts.js"></script>
       </body>
       </html>
+
 
       
 
