--- a/public/style.css
+++ b/public/style.css
@@ -2027,3 +2027,55 @@ button {
 button:hover {
   background-color: #0056b3; /* Warna latar belakang saat digulir */
 }
+
+/* .container {
+  max-width: 400px;
+  margin: 0 auto;
+} */
+
+.input-wrapper {
+  margin-bottom: 1rem;
+}
+
+/* .btn {
+  display: block;
+  width: 100%;
+  padding: 0.75rem;
+  font-size: 1rem;
+  text-align: center;
+  cursor: pointer;
+  border: none;
+  border-radius: 0.25rem;
+  background-color: #007bff;
+  color: #fff;
+} */
+
+.btn:hover {
+  background-color: #0056b3;
+}
+
+.alert {
+  position: relative;
+  padding: 1rem;
+  margin-bottom: 1rem;
+  margin-top: 1rem;
+  border: 1px solid transparent;
+  border-radius: 0.25rem;
+}
+
+.alert-primary {
+  color: #004085;
+  background-color: #cce5ff;
+  border-color: #b8daff;
+}
+
+.btn-close {
+  float: right;
+  font-size: 1.5rem;
+  margin-top: -10px;
+  font-weight: 700;
+  line-height: 1;
+  color: #000;
+  text-shadow: 0 1px 0 #fff;
+  opacity: .5;
+}
