--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1386,7 +1386,7 @@
                     <span>/ per person</span>
                   </p>
 
-                  <button id="bookNowBtn" class="btn btn-secondary">Book Now</button>
+                  <button id="bookNowBtn" class="btn btn-secondary btnBOOKCB1">Book Now</button>
 
                 </div>
 
@@ -1457,7 +1457,7 @@
                     <span>/ per person</span>
                   </p>
 
-                  <button id="bookNowBtn" class="btn btn-secondary">Book Now</button>
+                  <button id="bookNowBtn" class="btn btn-secondary btnBOOKCB2">Book Now</button>
 
                 </div>
 
@@ -1530,7 +1530,7 @@
                     <span>/ per person</span>
                   </p>
 
-                  <button id="bookNowBtn" class="btn btn-secondary">Book Now</button>
+                  <button id="bookNowBtn" class="btn btn-secondary btnBOOKCB3">Book Now</button>
 
                 </div>
 
@@ -1603,7 +1603,7 @@
                     <span>/ per person</span>
                   </p>
 
-                  <button id="bookNowBtn" class="btn btn-secondary">Book Now</button>
+                  <button id="bookNowBtn" class="btn btn-secondary btnBOOKCB4">Book Now</button>
 
                 </div>
 
